--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                 </ul>
 				</div>
               </li>      
-				</section>
+			  </ul> 
+			</section>
 
           <!-- We're done with jobs, let's move on to schools -->
 
@@ -167,9 +168,9 @@
           <!-- End of contact details, moving on to languages -->
 
           <section class="my-3 aside-section">
-            <h2>Languages</h2>
+            <h2 class="customcss-1">  Languages</h2>
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
-            <ul class="language-list list-unstyled">
+            <ul class="language-list list-unstyled ">
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Russian</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
