--- a/index.html
+++ b/index.html
@@ -226,7 +226,22 @@
               <li class="skill-item">Photography</li>
             </ul>
           </section>
-
+<ul class="contact-list list-unstyled">
+              <li class="contact-item">
+                <a class="d-flex align-items-center" href="mailto:233437@buas.nl" target="_blank">
+                  <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">233437@buas.nl
+                  
+                </a>
+              </li>
+              <li class="contact-item">
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/daria-vander-78867b293?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bu59T8mv4SKKZtnmz3L0pmA%3D%3D" target="_blank">
+                  <img class="contact-icon" src="images/icons/linkedin.svg" alt="Linked-In">
+                Daria Vander
+              </a>
+              </li
+              </li>
+          </ul>
+          </section>
         </aside>
       </div>
     </div>
